# flashdreams

./: .gitignore  .pre-commit-config-base.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV.md  LICENSE  NOTICE  README.md  REUSE.toml  THIRD-PARTY-NOTICES  feed_frames.sh  justfile  pyproject.toml  run_tests.sh  update_method.py
flashdreams/: pyproject.toml
flashdreams/examples/: run_alpadreams.py  run_causal_wan21.py  run_causal_wan22.py  run_lingbot_world.py  run_wan21.py
flashdreams/flashdreams/: __init__.py  _version.py
flashdreams/flashdreams/configs/: runner_configs.py
flashdreams/flashdreams/core/: __init__.py  log_filters.py
flashdreams/flashdreams/core/attention/: __init__.py  cp.py  kvcache.py  native.py  ring.py  rope.py
flashdreams/flashdreams/core/checkpoint/: load.py  remap.py
flashdreams/flashdreams/core/distributed/: __init__.py  context_parallel.py  rank_orchestration.py
flashdreams/flashdreams/core/experimental/: kvcache.py  test_block_kvcache.py
flashdreams/flashdreams/core/io/: download.py  hf.py  internal.py  s3_filesystem.py  s3_sync.py
flashdreams/flashdreams/infra/: cuda_graph.py  profiler.py  runner.py
flashdreams/flashdreams/infra/config/: __init__.py  base.py
flashdreams/flashdreams/infra/decoder/: __init__.py  base.py
flashdreams/flashdreams/infra/encoder/: __init__.py  base.py
flashdreams/flashdreams/infra/pipeline/: __init__.py  base.py
flashdreams/flashdreams/recipes/alpadreams/: config.py  pipeline.py
flashdreams/flashdreams/recipes/cosmos/: pipeline.py
flashdreams/flashdreams/recipes/lingbot_world/: config.py  pipeline.py
flashdreams/flashdreams/serving/: __init__.py  network.py
flashdreams/scripts/: convert_i4_dcp2pt.py
flashdreams/tests/: perf_rope.py  test_alpadreams.py  test_attention.py  test_checkpoint.py  test_context_parallel_strategy.py  test_cuda_graph.py  test_kvcache.py  test_lingbot_camera_utils.py  test_log_filters.py  test_model_instantiation.py  test_rank_orchestration.py  test_recipe_configs.py  test_rope_kernel.py  test_scheduler_fm_euler.py  test_template.py  test_vae.py  test_video_vae_tyro_cli.py  test_webrtc_serving.py
flashdreams/tests/scheduler/: _bench_lookup.py  _check_no_sync.py  _flow_unipc_inner.py  _profile_scheduler.py  conftest.py  impl_reference_flow_match.py  impl_reference_flow_unipc.py  test_scheduler_equivalence.py
flashdreams/tests/taehv/: _profile_taehv.py  impl_reference.py  test_taehv_equivalence.py
flashdreams/tests/wanvae/: _profile_wan_vae.py  conftest.py  impl_reference.py  test_wan_vae_equivalence.py
flashsim/: pyproject.toml
flashsim/attention/: kvcache.py  native.py  ring.py
flashsim/checkpoint/: load.py  remap.py
flashsim/configs/: __init__.py  alpadreams.py  base_config.py  wan2_1.py  wan2_2.py
flashsim/distributed/: __init__.py  context_parallel.py  s3_filesystem.py
flashsim/experimental/: test_kvcache.py
flashsim/model/img_encoder/: clip.py
flashsim/model/text_encoder/: base.py  cosmos_reason1.py  mock.py  utils.py  wan2_1.py
flashsim/model/video_dit/: base.py  mock.py  rope.py
flashsim/model/video_vae/: base.py  mock.py  pshuffle.py  teahv.py  wan.py
flashsim/pipeline/: alpadreams.py  mock.py  wan2_1.py  wan2_2.py
flashsim/tests/: test_vae.py  test_video_vae_tyro_cli.py
integrations/alpadreams/: README.md  compile_protos.sh  pyproject.toml
integrations/alpadreams/alpadreams/: runner.py
integrations/alpadreams/ludus-renderer/: README.md  THIRD_PARTY_NOTICES.txt  pyproject.toml
integrations/alpadreams/tests/: conftest.py  test_conditioning_wrapper.py  test_grpc_server_initialize_distributed.py  test_grpc_server_integration.py  test_ludus_renderer.py  test_recipe_configs.py  test_service_composition.py  test_webrtc_runtime.py  test_webrtc_server_routes.py  test_world_scenario_loader.py
integrations/causal_forcing/: README.md  pyproject.toml
integrations/causal_forcing/causal_forcing/: config.py  runner.py
integrations/causal_forcing/tests/: test_smoke.py
integrations/causal_wan2_2/: pyproject.toml
integrations/flashvsr/: README.md  pyproject.toml
integrations/flashvsr/flashvsr/: config.py  constants.py  runner.py
integrations/flashvsr/tests/: conftest.py  test_flashvsr.py  test_grpc_client.py  test_projector_benchmark.py  test_projector_cuda_graph.py
integrations/hy_worldplay/: README.md  pyproject.toml  run-docker.sh
integrations/hy_worldplay/hy_worldplay/: __init__.py  _action.py  _camera.py  _checkpoint.py  _debug_dump.py  _memory.py  _pose.py  _prope.py  config.py  runner.py
integrations/hy_worldplay/tests/: test_action.py  test_camera.py  test_checkpoint.py  test_memory.py  test_native_smoke.py  test_parity_helper.py  test_prefill.py  test_prope.py  test_smoke.py
integrations/lingbot/: README.md  pyproject.toml
integrations/lingbot/lingbot/: __init__.py  config.py  runner.py  trajectory_viz.py
integrations/lingbot/tests/: test_controls.py  test_distributed_server_main.py  test_server_routes.py  test_smoke.py  test_webrtc_runtime.py  test_webrtc_runtime_distributed.py
integrations/omnidreams/: README.md  pyproject.toml
integrations/omnidreams/ludus-renderer/: pyproject.toml
integrations/omnidreams/omnidreams/: config.py  prepare.py  runner.py  scenes.py
integrations/omnidreams/omnidreams_singleview/: thirdparty_sources.json
integrations/omnidreams/tests/: test_conditioning_wrapper.py  test_grpc_dynamic_actors.py  test_grpc_server_integration.py  test_internal_storage.py  test_ludus_renderer.py  test_omnidreams_singleview_native.py  test_prepare.py  test_recipe_configs.py  test_sync_thirdparty.py  test_webrtc_runtime.py  test_webrtc_server_routes.py
integrations/self_forcing/: README.md  pyproject.toml
integrations/self_forcing/self_forcing/: config.py  runner.py
integrations/self_forcing/tests/: test_smoke.py
integrations/wan21/: README.md  pyproject.toml
integrations/wan21/assets/: prompt_i2v.txt  prompt_t2v.txt
integrations/wan21/tests/: test_smoke.py
integrations/wan21/wan21/: config.py  runner.py
integrations/wan2_1/: pyproject.toml
(+548 files in other folders)
