[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashsim"
version = "0.1.0"
description = "Flash video simulation pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.42.54",
    "botocore==1.42.54",
    "einops==0.8.2",
    "ftfy==6.3.1",
    "huggingface-hub==0.36.2",
    "loguru==0.7.3",
    "mediapy==1.2.6",
    "numpy==1.26.4",
    "nvidia-ml-py==13.590.48",
    "safetensors==0.7.0",
    "torch==2.11.0", # 2.11.0a0+eb65b36914.nv26.2
    "tqdm==4.67.3",
    "transformer-engine==2.12.0", # 2.12.0+5671fd36
    "transformers==4.57.6",
    "tyro==1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
]
streaming = [
    "pillow==11.1.0",
    "websockets==14.2",
]
# Optional: ``python -m projects.streaming_ws client --show-window`` for OpenCV preview.
streaming_viewer = [
    "opencv-python==4.10.0.84",
]

[tool.setuptools.packages.find]
exclude = ["tests"]
