# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashdreams"
dynamic = ["version"]
description = "High-performance streaming video diffusion framework with pluggable model backends"
readme = "PYPI_README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.35",
    "botocore>=1.35",
    "einops>=0.7",
    "filelock>=3",
    "ftfy>=6.0",
    "huggingface-hub>=0.33",
    "loguru>=0.7",
    "numpy>=1.24",
    "nvidia-ml-py>=12.0",
    "safetensors>=0.4",
    "tqdm>=4.60",
    "transformers==4.57.6",
    "torchvision",
    # tyro powers the ``flashdreams-run`` console script (subcommand
    # union over the recipe registry, per-field CLI overrides), so it
    # has to ship as a runtime dependency, not a dev-only one.
    "tyro>=0.8",

    "torch>=2.11",
    "torchvision>=0.22",
    # ``torch.compile`` lowers conv/elementwise kernels through Inductor +
    # Triton. On Windows the upstream PyPI ``triton`` package is Linux-only,
    # so without ``triton-windows`` Inductor crashes deep inside its
    # template heuristics with ``TypeError: object() takes no arguments``.
    # The maintainers ship a Windows-compatible drop-in under the
    # ``triton-windows`` package; pulling it on win32 keeps every
    # ``use_compile=True`` config path (encoder, decoder, DiT) working
    # the same way it does on Linux. This is the same fix carried before
    # on dev/truesight_alpa, scoped to the workspace member that owns
    # the ``use_compile`` knob.
    "triton-windows>=3.5.0; sys_platform == 'win32'",
]

[project.scripts]
# Unified CLI over every registered recipe (in-tree + plugin-discovered).
# Mirrors nerfstudio's ``ns-train`` console script shape (one hyphenated
# binary, tyro union over runners as direct subcommands).
flashdreams-run = "flashdreams.scripts.cli:entrypoint"

[project.urls]
Homepage = "https://github.com/NVIDIA/flashdreams"
Repository = "https://github.com/NVIDIA/flashdreams"
"Bug Tracker" = "https://github.com/NVIDIA/flashdreams/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mediapy>=1.1",
    "pytest-manual-marker",
    # Transformer Engine is the parity / perf reference for the
    # in-house RoPE Triton kernel (see ``tests/test_rope_kernel.py``
    # and ``tests/perf_rope.py``). No runtime code imports it; gate
    # on Linux because there are no Windows wheels.
    "transformer-engine[pytorch,core-cu13]>=2.12; sys_platform != 'win32'",
]
# Legacy alias kept around so the lock file resolves identically to
# main; the canonical extra is ``runners`` (same package set).
examples = [
    "mediapy>=1.1",
    "opencv-python-headless",
    "scipy>=1.11",
]
# I/O dependencies the ``flashdreams-run`` CLI runners lazy-import
# (image decoding for I2V first-frames, MP4 muxing for outputs). Kept
# off the core install so a serving deployment that uses the bare
# pipeline (e.g. ``integrations/lingbot``) doesn't pull in ffmpeg / opencv.
runners = [
    "mediapy>=1.1",
    "opencv-python-headless",
    "scipy>=1.11",
]

[tool.setuptools.dynamic]
# Resolve version from _version.py (not __init__.py) so setuptools never
# imports the full package at build time -- avoids triggering transitive
# imports of heavy dependencies like torch / transformer-engine.
version = {attr = "flashdreams._version.__version__"}

[tool.setuptools.packages.find]
include = ["flashdreams*"]
exclude = ["tests", "flashdreams._pytest_plugins*"]

# PyPI's default ``torch`` is the CPU build on Windows. The truesight CUDA
# extensions (built by ``uv run build-truesight``) need a CUDA-enabled
# PyTorch so PyTorch's ``cpp_extension`` resolves ``CUDA_HOME`` from the
# env (the gate is ``torch.version.cuda is not None``). On Linux the
# default wheel is already CUDA-enabled; on Windows we have to point at
# NVIDIA's PyTorch index. Constrain by marker so the override only fires
# on Windows -- Linux / NGC users keep the upstream wheel.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]

[tool.uv]
managed = true
