[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashsim"
version = "0.1.0"
description = "Flash video simulation pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "botocore>=1.35",
    "einops>=0.7",
    "ftfy>=6.0",
    "huggingface-hub>=0.33",
    "loguru>=0.7",
    "numpy>=1.24",
    "nvidia-ml-py>=12.0",
    "safetensors>=0.4",
    "torch>=2.11.0a0",           # NVIDIA container ships 2.11.0a0+eb65b36914.nv26.2
    "tqdm>=4.60",
    "transformer-engine>=2.12",  # NVIDIA container ships 2.12.0+5671fd36
    "transformers==4.57.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "tyro>=0.8",
    "mediapy>=1.1",
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
markers = [
    "manual: requires GPU and/or network access (opt-in only)",
    "slow: long-running test",
]
