[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashsim"
version = "0.1.0"
description = "Flash video simulation pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.35",
    "botocore>=1.35",
    "einops>=0.7",
    "ftfy>=6.0",
    "huggingface-hub>=0.33",
    "loguru>=0.7",
    "numpy>=1.24",
    "nvidia-ml-py>=12.0",
    "safetensors>=0.4",
    "tqdm>=4.60",
    "transformers==4.57.6",

    "torch>=2.11",
    "torchvision>=0.22",
    "transformer-engine[pytorch,core-cu13]>=2.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "tyro>=0.8",
    "mediapy>=1.1",
]

[tool.setuptools.packages.find]
include = ["flashsim*"]
exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
markers = [
    "manual: requires GPU and/or network access (opt-in only)",
    "slow: long-running test",
]
