# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-alpadreams"
version = "0.1.0"
description = "Alpadreams inference with flashdreams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flashdreams",
    "mediapy>=1.1",
    "ludus-renderer==0.5.0+cuda",
    "grpcio-tools",
    "grpcio",
    "opencv-python-headless",
    "shapely"
]

[tool.uv.sources]
flashdreams = { workspace = true }
ludus-renderer = { index = "ludus_renderer_gitlab" }

[[tool.uv.index]]
name = "ludus_renderer_gitlab"
url = "https://gitlab-master.nvidia.com/api/v4/projects/265148/packages/pypi/simple"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-manual-marker",
]

[tool.setuptools.packages.find]
exclude = ["tests"]
