# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-alpadreams"
version = "0.1.0a2"
description = "Alpadreams inference with flashdreams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flashdreams[serving]",
    "mediapy>=1.1",
    "ludus-renderer",
    "imageio",
    "grpcio-tools",
    "grpcio",
    "opencv-python-headless",
    "shapely"
]

[tool.uv.sources]
flashdreams = { workspace = true }
ludus-renderer = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-manual-marker",
]

# Each entry registers one ``runner_name`` slug with ``flashdreams-run``.
# The discovery layer (``flashdreams.plugins.registry.discover_runners``)
# scans this group at CLI startup; the entry-point name itself is purely
# informational, the registry key always comes from ``cfg.runner_name``.
[project.entry-points."flashdreams.runner_configs"]
"alpadreams-sv-2steps-chunk2-loc6-lightvae-lighttae" = "alpadreams.config:RUNNER_SV_2STEPS_CHUNK2_LOC6_LIGHTVAE_LIGHTTAE"
"alpadreams-sv-2steps-chunk2-loc6-lightvae-lighttae-perf" = "alpadreams.config:RUNNER_SV_2STEPS_CHUNK2_LOC6_LIGHTVAE_LIGHTTAE_PERF"
"alpadreams-sv-2steps-chunk2-loc6-vae-vae" = "alpadreams.config:RUNNER_SV_2STEPS_CHUNK2_LOC6_VAE_VAE"
"alpadreams-sv-2steps-chunk3-loc6-vae-vae" = "alpadreams.config:RUNNER_SV_2STEPS_CHUNK3_LOC6_VAE_VAE"
"alpadreams-sv-2steps-chunk4-loc8-pshuffle-lighttae" = "alpadreams.config:RUNNER_SV_2STEPS_CHUNK4_LOC8_PSHUFFLE_LIGHTTAE"
"alpadreams-mv-2steps-chunk4-loc8-pshuffle-lighttae" = "alpadreams.config:RUNNER_MV_2STEPS_CHUNK4_LOC8_PSHUFFLE_LIGHTTAE"
"alpadreams-sv-35steps-chunk2-loc24-cosmos2-2b-res720p-30fps-hdmap-vae-mads1m" = "alpadreams.config:RUNNER_SV_35STEPS_CHUNK2_LOC24_COSMOS2_2B_RES720P_30FPS_HDMAP_VAE_MADS1M"
"alpadreams-sv-35steps-chunk48-loc48-cosmos2-2b-res720p-30fps-hdmap-vae-mads1m" = "alpadreams.config:RUNNER_SV_35STEPS_CHUNK48_LOC48_COSMOS2_2B_RES720P_30FPS_HDMAP_VAE_MADS1M"
"alpadreams-experiment1-baseline" = "alpadreams.config:RUNNER_EXPERIMENT1_BASELINE"
"alpadreams-experiment1-skip-finalize-kv-cache" = "alpadreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE"
"alpadreams-experiment1-skip-finalize-kv-cache-noise350" = "alpadreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE350"
"alpadreams-experiment1-skip-finalize-kv-cache-noise250" = "alpadreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE250"
"alpadreams-experiment1-skip-finalize-kv-cache-noise150" = "alpadreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE150"
"alpadreams-experiment1-skip-finalize-kv-cache-noise100" = "alpadreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE100"

[tool.setuptools.packages.find]
include = ["alpadreams*"]
exclude = ["tests"]

[tool.uv]
managed = true
