# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashdreams-causal-forcing"
version = "0.1.0a2"
description = "Causal-Forcing chunkwise / framewise streaming T2V + I2V inference for Wan 2.1 1.3B, packaged as a flashdreams plugin."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flashdreams",
    "mediapy>=1.1",
    "opencv-python-headless",
]

[tool.uv.sources]
flashdreams = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

# Each entry registers one ``runner_name`` slug with ``flashdreams-run``.
# The discovery layer (``flashdreams.plugins.registry.discover_runners``)
# scans this group at CLI startup; the entry-point name itself is purely
# informational, the registry key always comes from ``cfg.runner_name``.
[project.entry-points."flashdreams.runner_configs"]
"causal-forcing-wan2.1-t2v-1.3b-chunkwise" = "causal_forcing.config:RUNNER_WAN21_T2V_1PT3B_CHUNKWISE"
"causal-forcing-wan2.1-t2v-1.3b-framewise" = "causal_forcing.config:RUNNER_WAN21_T2V_1PT3B_FRAMEWISE"
"causal-forcing-wan2.1-i2v-1.3b-framewise" = "causal_forcing.config:RUNNER_WAN21_I2V_1PT3B_FRAMEWISE"

[tool.setuptools.packages.find]
include = ["causal_forcing*"]
exclude = ["tests"]

[tool.uv]
managed = true
