[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-causal-wan2-2"
version = "0.1.0"
description = "Causal Wan 2.2 integration with flashsim"
requires-python = ">=3.12"
dependencies = [
    "flashsim",
    "mediapy>=1.1",
]

[tool.uv.sources]
flashsim = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
exclude = ["tests"]
