# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashdreams-lingbot"
version = "0.1.0a3"
description = "Lingbot World streaming camera-control I2V integration + WebRTC server for flashdreams."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flashdreams",
    "aiohttp>=3.9",
    "aiortc>=1.9",
    "mediapy>=1.1",
    "opencv-python-headless",
    "scipy>=1.11",
]

[tool.uv.sources]
flashdreams = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

# Each entry registers one ``runner_name`` slug with ``flashdreams-run``.
# The discovery layer (``flashdreams.plugins.registry.discover_runners``)
# scans this group at CLI startup; the entry-point name itself is purely
# informational, the registry key always comes from ``cfg.runner_name``.
[project.entry-points."flashdreams.runner_configs"]
"lingbot-world-fast" = "lingbot.config:RUNNER_LINGBOT_WORLD_FAST"
"lingbot-world-fast-flash" = "lingbot.config:RUNNER_LINGBOT_WORLD_FAST_FLASH"

[tool.setuptools.packages.find]
include = ["lingbot*"]
exclude = ["tests"]

[tool.uv]
managed = true
