# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashdreams-omnidreams"
version = "0.1.0a3"
description = "Omnidreams inference with flashdreams"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flashdreams[serving]",
    "mediapy>=1.1",
    "ludus-renderer",
    "imageio",
    "grpcio-tools",
    "grpcio",
    "nvidia-cudnn-frontend==1.22.1",
    "opencv-python-headless",
    "shapely"
]

[tool.uv.sources]
flashdreams = { workspace = true }
ludus-renderer = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-manual-marker",
]

# Each entry registers one ``runner_name`` slug with ``flashdreams-run``.
# The discovery layer (``flashdreams.plugins.registry.discover_runners``)
# scans this group at CLI startup; the entry-point name itself is purely
# informational, the registry key always comes from ``cfg.runner_name``.
[project.entry-points."flashdreams.runner_configs"]
"omnidreams-sv-2steps-chunk2-loc6-lightvae-lighttae" = "omnidreams.config:RUNNER_SV_2STEPS_CHUNK2_LOC6_LIGHTVAE_LIGHTTAE"
"omnidreams-sv-2steps-chunk2-loc6-lightvae-lighttae-perf" = "omnidreams.config:RUNNER_SV_2STEPS_CHUNK2_LOC6_LIGHTVAE_LIGHTTAE_PERF"
"omnidreams-sv-2steps-chunk2-loc6-vae-vae" = "omnidreams.config:RUNNER_SV_2STEPS_CHUNK2_LOC6_VAE_VAE"
"omnidreams-sv-2steps-chunk3-loc6-vae-vae" = "omnidreams.config:RUNNER_SV_2STEPS_CHUNK3_LOC6_VAE_VAE"
"omnidreams-sv-2steps-chunk4-loc8-pshuffle-lighttae" = "omnidreams.config:RUNNER_SV_2STEPS_CHUNK4_LOC8_PSHUFFLE_LIGHTTAE"
"omnidreams-mv-2steps-chunk4-loc8-pshuffle-lighttae" = "omnidreams.config:RUNNER_MV_2STEPS_CHUNK4_LOC8_PSHUFFLE_LIGHTTAE"
"omnidreams-sv-35steps-chunk2-loc24-cosmos2-2b-res720p-30fps-hdmap-vae-mads1m" = "omnidreams.config:RUNNER_SV_35STEPS_CHUNK2_LOC24_COSMOS2_2B_RES720P_30FPS_HDMAP_VAE_MADS1M"
"omnidreams-sv-35steps-chunk48-loc48-cosmos2-2b-res720p-30fps-hdmap-vae-mads1m" = "omnidreams.config:RUNNER_SV_35STEPS_CHUNK48_LOC48_COSMOS2_2B_RES720P_30FPS_HDMAP_VAE_MADS1M"
"omnidreams-experiment1-baseline" = "omnidreams.config:RUNNER_EXPERIMENT1_BASELINE"
"omnidreams-experiment1-skip-finalize-kv-cache" = "omnidreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE"
"omnidreams-experiment1-skip-finalize-kv-cache-noise350" = "omnidreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE350"
"omnidreams-experiment1-skip-finalize-kv-cache-noise250" = "omnidreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE250"
"omnidreams-experiment1-skip-finalize-kv-cache-noise150" = "omnidreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE150"
"omnidreams-experiment1-skip-finalize-kv-cache-noise100" = "omnidreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE100"

[tool.setuptools.packages.find]
include = ["omnidreams*"]
exclude = ["tests"]

[tool.uv]
managed = true
