# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashdreams-omnidreams"
version = "0.1.0a3"
description = "Omnidreams inference with flashdreams (webrtc / gRPC servers + the interactive-drive desktop demo)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core inference / serving deps (consumed by ``omnidreams.webrtc``,
    # ``omnidreams.grpc``, and the ``omnidreams.interactive_drive`` desktop
    # demo subpackage).
    "flashdreams[serving]",
    "mediapy>=1.1",
    "ludus-renderer",
    "imageio",
    "grpcio-tools",
    "grpcio",
    "nvidia-cudnn-frontend==1.22.1",
    "opencv-python-headless",
    "shapely",
    # Runtime deps for the ``omnidreams.interactive_drive`` desktop demo
    # subpackage. Most are already transitive via ``flashdreams[serving]``
    # but listed here explicitly so the subpackage's dep surface is
    # self-describing.
    "numpy>=1.26",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "pyarrow>=16.0",
    "torch>=2.11",
    "torchvision>=0.26",
    "einops>=0.8",
    "safetensors>=0.5",
    "tqdm>=4.67",
    "transformers>=5.0,<6",
    "huggingface_hub>=0.24",
]

[tool.uv.sources]
flashdreams = { workspace = true }
ludus-renderer = { workspace = true }

[project.optional-dependencies]
# Slangpy + Vulkan runtime, only needed by the ``interactive-drive``
# desktop demo (``omnidreams.interactive_drive``). Server users
# (``omnidreams.webrtc`` / ``omnidreams.grpc``) don't need this and
# shouldn't pay the slangpy install cost in their containers. Named
# after the consumer (the ``interactive-drive`` script) rather than
# the abstract capability so the install command is self-documenting.
interactive-drive = [
    "slangpy==0.42.0",
]
dev = [
    "pytest>=8.0",
    "pytest-manual-marker",
    # ``omnidreams.interactive_drive`` test-only deps.
    "pyvirtualdisplay>=3.0",
    "flip-evaluator>=1.7",
]

[project.scripts]
# ``omnidreams-prepare`` stages resources used by *both* demo paths
# (desktop ``interactive-drive`` *and* ``omnidreams.webrtc.server``):
# the scene USDZs from ``nvidia/omni-dreams-scenes`` and the
# Cosmos-Reason1 text encoder pinned to its runtime revision. Lives at
# the package level (``omnidreams.prepare``) rather than under
# ``omnidreams.interactive_drive`` so the name doesn't suggest a single
# demo.
omnidreams-prepare = "omnidreams.prepare:main"

# Desktop interactive-drive demo entry point. Requires the
# ``interactive-drive`` extra (it adds slangpy); without it the
# presenter import fails fast with a clear message.
interactive-drive = "omnidreams.interactive_drive.demo:main"

# Each entry registers one ``runner_name`` slug with ``flashdreams-run``.
# The discovery layer (``flashdreams.plugins.registry.discover_runners``)
# scans this group at CLI startup; the entry-point name itself is purely
# informational, the registry key always comes from ``cfg.runner_name``.
[project.entry-points."flashdreams.runner_configs"]
"omnidreams-sv-2steps-chunk2-loc6-lightvae-lighttae" = "omnidreams.config:RUNNER_SV_2STEPS_CHUNK2_LOC6_LIGHTVAE_LIGHTTAE"
"omnidreams-sv-2steps-chunk2-loc6-lightvae-lighttae-perf" = "omnidreams.config:RUNNER_SV_2STEPS_CHUNK2_LOC6_LIGHTVAE_LIGHTTAE_PERF"
"omnidreams-sv-2steps-chunk2-loc6-vae-vae" = "omnidreams.config:RUNNER_SV_2STEPS_CHUNK2_LOC6_VAE_VAE"
"omnidreams-sv-2steps-chunk3-loc6-vae-vae" = "omnidreams.config:RUNNER_SV_2STEPS_CHUNK3_LOC6_VAE_VAE"
"omnidreams-sv-2steps-chunk4-loc8-pshuffle-lighttae" = "omnidreams.config:RUNNER_SV_2STEPS_CHUNK4_LOC8_PSHUFFLE_LIGHTTAE"
"omnidreams-mv-2steps-chunk4-loc8-pshuffle-lighttae" = "omnidreams.config:RUNNER_MV_2STEPS_CHUNK4_LOC8_PSHUFFLE_LIGHTTAE"
"omnidreams-sv-35steps-chunk2-loc24-cosmos2-2b-res720p-30fps-hdmap-vae-mads1m" = "omnidreams.config:RUNNER_SV_35STEPS_CHUNK2_LOC24_COSMOS2_2B_RES720P_30FPS_HDMAP_VAE_MADS1M"
"omnidreams-sv-35steps-chunk48-loc48-cosmos2-2b-res720p-30fps-hdmap-vae-mads1m" = "omnidreams.config:RUNNER_SV_35STEPS_CHUNK48_LOC48_COSMOS2_2B_RES720P_30FPS_HDMAP_VAE_MADS1M"
"omnidreams-experiment1-baseline" = "omnidreams.config:RUNNER_EXPERIMENT1_BASELINE"
"omnidreams-experiment1-skip-finalize-kv-cache" = "omnidreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE"
"omnidreams-experiment1-skip-finalize-kv-cache-noise350" = "omnidreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE350"
"omnidreams-experiment1-skip-finalize-kv-cache-noise250" = "omnidreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE250"
"omnidreams-experiment1-skip-finalize-kv-cache-noise150" = "omnidreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE150"
"omnidreams-experiment1-skip-finalize-kv-cache-noise100" = "omnidreams.config:RUNNER_EXPERIMENT1_SKIP_FINALIZE_KV_CACHE_NOISE100"

[tool.setuptools.packages.find]
include = ["omnidreams*"]
exclude = ["tests"]

# Ship the ``omnidreams.interactive_drive`` subpackage's bundled assets
# (configs + scene staging dir + doc images) in built wheels so the
# in-process CLI defaults (resolved relative to ``_PACKAGE_ROOT`` in
# ``cli.py``) work for users who install a wheel rather than the
# workspace editable. Editable installs pick these up from the source
# tree automatically.
[tool.setuptools.package-data]
"omnidreams.interactive_drive" = [
    "configs/*.yaml",
    "configs/wheels/*.yaml",
    "assets/README.md",
    "README.md",
    "hdmap.png",
    "screenshot.jpg",
]

[tool.uv]
managed = true
